--- a/layouts/partials/author-aside.html
+++ b/layouts/partials/author-aside.html
@@ -1,27 +1,32 @@
-<aside class="author-aside-card featured-image">
-  <div class="author-aside-card__portrait">
-    <img src="/authors/nick-tune/nick-tune-portrait.jpg" alt="Nick Tune portrait" />
-  </div>
-  <div class="author-aside-card__info">
-    <div class="author-aside-card__name">Nick Tune</div>
-    <div class="author-aside-card__title">Senior Staff Engineer</div>
-    <div class="author-aside-card__bio">
-      Nick Tune is a Senior Staff Engineer at PayFit and the author of <em>"Architecture Modernization"</em> (Manning). He loves helping organizations to turn their legacy systems into competitive advantage.
+<figure class="fig fig--ph-right fig--w-small fig--featured">
+<div class="author-section">
+  <div class="author-header">ARTICLE AUTHOR</div>
+  <aside>
+    <div class="author-aside-card__portrait">
+      <img src="/authors/nick-tune/nick-tune-portrait.jpg" alt="Nick Tune portrait" />
     </div>
-    <div class="author-aside-card__links">
-      <a href="https://www.linkedin.com/company/legacy-modernization-io" target="_blank" rel="noopener">LinkedIn</a>
-      <a href="https://bsky.app/profile/nick-tune.me" target="_blank" rel="noopener">BlueSky</a>
-      <a href="https://nick-tune.me" target="_blank" rel="noopener">Website</a>
-      <a href="https://github.com/ntcoding" target="_blank" rel="noopener">GitHub</a>
+    <div class="">
+      <div class="author-aside-card__name">Nick Tune</div>
+      <div class="author-aside-card__title">Senior Staff Engineer</div>
+      <div class="author-aside-card__bio">
+        Nick Tune is a Senior Staff Engineer at PayFit and the author of <em>"Architecture Modernization"</em> (Manning). He loves helping organizations to turn their legacy systems into competitive advantage.
+      </div>
+      <div class="author-aside-card__links">
+        <a href="https://www.linkedin.com/company/legacy-modernization-io" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://bsky.app/profile/nick-tune.me" target="_blank" rel="noopener">BlueSky</a>
+        <a href="https://nick-tune.me" target="_blank" rel="noopener">Website</a>
+        <a href="https://github.com/ntcoding" target="_blank" rel="noopener">GitHub</a>
+      </div>
     </div>
-  </div>
-  
-  <div class="author-aside-card__cta">
-    <svg class="separator-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M19 9L12 16L5 9" stroke="#0072b1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-    </svg>
-    <h3>Share Your Experience</h3>
-    <p>Have you successfully modernized legacy systems? We'd love to feature your patterns and case studies.</p>
-    <a href="https://github.com/ntcoding/legacy-modernization-io#contributing-guidelines" class="cta-button" target="_blank">Contribute</a>
-  </div>
+  </aside>
+</div>
+
+<aside class="author-cta-card">
+  <svg class="separator-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M19 9L12 16L5 9" stroke="#7b2cbf" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+  <h3>Share Your Experience</h3>
+  <p>Have you successfully modernized legacy systems? We'd love to feature your patterns and case studies.</p>
+  <a href="https://github.com/ntcoding/legacy-modernization-io#contributing-guidelines" class="cta-button" target="_blank">Contribute</a>
 </aside>
+</figure>
