--- a/layouts/patterns/single.html
+++ b/layouts/patterns/single.html
@@ -4,7 +4,7 @@
 {{- define "main" }}
 <div id="l-content-box" class="l-box l-box--full">
   <article id="l-content" data-pagefind-body>
-    <header class="page-header">
+    <header class="page-header page-header--left">
       <div class="title title--sans">
         <hr>
         {{- partial "file/vscode_start.html" .Page }}
@@ -12,6 +12,9 @@
         {{- partial "title/subtitle.html" . }}
         {{- partial "file/vscode_end.html" .Page }}
       </div>
+      <figure class="fig fig--ph-right fig--w-small fig--featured">
+        {{ partial "author-aside.html" . }}
+      </figure>
     </header>
     <div class="md md--sans md--h-sans md--margin-full">
       {{- partial "replacements.html" .Content -}}
@@ -19,7 +22,6 @@
     <div class="margin-full">
       {{- partial "nav/related/small-cards.html" . }}
     </div>
-    {{ partial "author-aside.html" . }}
   </article>
   <footer class="page-footer margin-full">
     <hr>
