--- a/layouts/partials/author-aside.html
+++ b/layouts/partials/author-aside.html
@@ -1,22 +1,20 @@
 <figure class="fig fig--ph-right fig--w-small fig--featured">
 <div class="author-section">
   <div class="author-header">ARTICLE AUTHOR</div>
-  <aside>
+  <aside class="author-aside-card">
     <div class="author-aside-card__portrait">
       <img src="/authors/nick-tune/nick-tune-portrait.jpg" alt="Nick Tune portrait" />
     </div>
-    <div class="">
-      <div class="author-aside-card__name">Nick Tune</div>
-      <div class="author-aside-card__title">Senior Staff Engineer</div>
-      <div class="author-aside-card__bio">
-        Nick Tune is a Senior Staff Engineer at PayFit and the author of <em>"Architecture Modernization"</em> (Manning). He loves helping organizations to turn their legacy systems into competitive advantage.
-      </div>
-      <div class="author-aside-card__links">
-        <a href="https://www.linkedin.com/company/legacy-modernization-io" target="_blank" rel="noopener">LinkedIn</a>
-        <a href="https://bsky.app/profile/nick-tune.me" target="_blank" rel="noopener">BlueSky</a>
-        <a href="https://nick-tune.me" target="_blank" rel="noopener">Website</a>
-        <a href="https://github.com/ntcoding" target="_blank" rel="noopener">GitHub</a>
-      </div>
+    <div class="author-aside-card__name">Nick Tune</div>
+    <div class="author-aside-card__title">Senior Staff Engineer</div>
+    <div class="author-aside-card__bio">
+      Nick Tune is a Senior Staff Engineer at PayFit and the author of <em>"Architecture Modernization"</em> (Manning). He loves helping organizations to turn their legacy systems into competitive advantage.
+    </div>
+    <div class="author-aside-card__links">
+      <a href="https://www.linkedin.com/company/legacy-modernization-io" target="_blank" rel="noopener">LinkedIn</a>
+      <a href="https://bsky.app/profile/nick-tune.me" target="_blank" rel="noopener">BlueSky</a>
+      <a href="https://nick-tune.me" target="_blank" rel="noopener">Website</a>
+      <a href="https://github.com/ntcoding" target="_blank" rel="noopener">GitHub</a>
     </div>
   </aside>
 </div>
